--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,245 @@ nav ul{
      gap: 4.1em;
      margin: 0;
     }
+
+nav ul li a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: black;
+    font-size: 1.6rem;
+    position: relative;
+}
+
+nav ul li .active:before{
+    position: absolute;
+    content: "";
+    width: 60%;
+    height: 2px;
+    bottom: 0;
+    border-bottom: 2px solid black;
+}
+
+nav ul li a:before{
+    position: absolute;
+    content: "";
+    width: 0%;
+    height: 1px;
+    bottom: 0;
+    border-bottom: 2px solid black;
+    transition: width .3s;
+}
+
+
+
+main{
+    display: flex;
+    gap: 5em;
+    margin-top: 10em;
+}
+
+.left-col{
+    width: 45%;
+}
+
+.right-col{
+    flex-grow: 1;
+}
+
+
+h1{
+    font-size: 5.2rem;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: normal;
+    margin: 0;
+}
+
+.subhead{
+    font-size: 1.8rem;
+}
+
+.cta-btns{
+    gap: 2em;
+    display: flex;
+    height: 60px
+}
+
+.secondary-cta{
+    display: flex;
+    text-decoration: none;
+    color: black;
+    padding: 1em 0;
+    font-size: 1.8em;
+}
+
+.primary-cta{
+    background-color: #F1E2D1;
+    padding: 1em 2em;
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+    border-radius: 1.9em;
+}
+
+.secondary-cta svg{
+    width: 20px;
+    transition: .3s;
+}
+
+.news-sect
+{
+    display: flex;
+    gap: 3em;
+    padding: 1em;
+    margin-top: 3em;
+    border: 1px black solid;
+    border-radius: .8em;
+    position: relative;
+}
+
+.news-sect:before{
+    position: absolute;
+    content: "";
+    background: url('../images/confetti.svg');
+    width: 100px;
+    height: 100px;
+    top: -20px;
+    left: -20px;
+    z-index: 2;
+}
+
+p.num-employees{
+    font-size: 3.3rem;
+    margin: 0;
+    font-weight: 300;
+    line-height: 100%;
+}
+
+p.info-employees{
+    font-size: 1.4rem;
+    margin: 0;
+}
+
+.right-col{
+    display: grid;
+    gap: 2.3em;
+    grid-template-columns: auto auto;
+    grid-template-areas: 
+    "left right"
+    "left bottom";
+}
+
+.card{
+border-radius: .8em;
+padding: 1.1em;
+display: flex;
+align-items: end;
+background-size: 150%;
+transition: background-size 800ms;
+}
+
+.card1{
+    grid-area: left;
+    background-image: url('../images/clothing1.jpg');
+    position: relative;
+}
+
+.card1:before{
+    position: absolute;
+    content: "";
+    background: url('../images/tag.svg') no-repeat;
+    width: 100%;
+    height: 100%;
+    left: -30px;
+    top: 20px;
+    pointer-events: none;
+}
+
+.card2{
+    background-image: url('../images/clothing2.jpg');
+}
+
+.card3{
+    background-image: url('../images/clothing3.jpg');
+}
+
+.card-details{
+    background: white;
+    border-radius: .6em;
+    padding: .8em;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transition: transform 800ms;
+}
+
+.card-details a{
+    font-size: 1.6rem;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+}
+
+.card-details p{
+    font-size: 1.4rem;
+    margin: 0;
+}
+
+p.product-price{
+    font-size: 1.3em;
+}
+
+nav ul li a:hover:before{
+    width: 45%;
+}
+
+.primary-cta:hover{
+    background: #E2D1BD;
+}
+
+.secondary-cta:hover svg{
+    transform: translateX(10px);
+}
+
+.secondary-cta:hover{
+    text-decoration: underline;
+}
+
+.card:hover{
+background-size: 160%;
+}
+
+.card:hover .card-details{
+    transform: translateY(-20px);
+}
+
+.overlay{
+    position: absolute;
+    z-index: 999;
+    background: white;
+    width: 100%;
+    height: 100%;
+    animation: reveal 1s ease-in forwards;
+    transform-origin: bottom;
+}
+
+@keyframes reveal{
+    from{
+        transform: scaleY(1);
+    }
+
+    to{
+        transform: scaleY(0);
+    }
+}
+
+main{
+    animation: growIn 2s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
+    transform: scale(.4);
+}
+
+@keyframes growIn{
+    to{
+        transform: scale(1);
+    }
+}
